# zx-showcase

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
games/lumina-depths/: .gitignore  Cargo.toml  nether.toml
games/lumina-depths/.claude/: project-status.md
games/lumina-depths/.studio/: MIGRATION.md  README.md  creative-direction.local.md  project-status.md  sonic-identity.local.md
games/lumina-depths/.studio/parsers/: __init__.py  it_writer.py  music.py  sound.py  texture.py  xm_types.py
games/lumina-depths/docs/: GDD.md
games/lumina-depths/generation/: generate_all.py
games/lumina-depths/generation/lib/: __init__.py  audio_utils.py  bpy_utils.py  mesh_utils.py
games/lumina-depths/generation/meshes/: blue_whale.py  convert_obj_to_glb.py  sperm_whale.py  submersible.py  whales.py  zone1_creatures.py  zone2_creatures.py  zone3_creatures.py  zone4_creatures.py
games/lumina-depths/generation/sounds/: _generate.py  ambient_midnight.py  ambient_sunlit.py  ambient_twilight.py  ambient_vents.py  audio.py  whale.py  whale_echo.py
games/lumina-depths/scripts/: generate_audio.py  generate_submersible.py  generate_whales.py  generate_zone1_creatures.py  generate_zone2_creatures.py  generate_zone3_creatures.py  generate_zone4_creatures.py
games/lumina-depths/specs/sounds/: ambient_midnight.spec.py  ambient_twilight.spec.py  ambient_vents.spec.py  whale_echo.spec.py
games/lumina-depths/src/: lib.rs
games/override/: .gitignore  Cargo.toml  build.rs  nether.toml
games/override/.claude/: creative-direction.local.md  project-status.md  sonic-identity.local.md
games/override/.studio/: MIGRATION.md  creative-direction.local.md  generate.py  project-status.md  sonic-identity.md
games/override/.studio/parsers/: animation.py  it_types.py  normal.py
games/override/docs/design/: asset-specs.md  constraint-validation.md  game-design.md
games/override/generation/: generate_all.py
games/override/generation/lib/: __init__.py  bpy_utils.py
games/override/generation/meshes/: characters.py  door_closed.py  door_open.py  drone.py  environment.py  floor_grate.py  floor_metal.py  runner.py  trap_spike.py  wall_solid.py  wall_window.py
games/override/generation/sounds/: _generate.py  alarm.py  audio.py  core_pickup.py  door_close.py  door_locked.py  door_open.py  drone_hover.py  footstep.py  footstep_sprint.py  trap_spike.py
games/override/specs/sounds/: core_pickup.spec.py  door_locked.spec.py  trap_spike.spec.py
games/override/src/: ai.rs  camera.rs  ffi.rs  lib.rs
games/prism-survivors/: .gitignore  Cargo.toml  nether.toml
games/prism-survivors/.claude/: project-status.md
games/prism-survivors/.studio/: MIGRATION.md  creative-direction.md  project-status.md  sonic-identity.local.md
games/prism-survivors/.studio/parsers/: character.py
games/prism-survivors/docs/: GDD.md
games/prism-survivors/generation/: generate_all.py
games/prism-survivors/generation/lib/: __init__.py
games/prism-survivors/src/: gameplay.rs  lib.rs  math.rs  powerups.rs  rendering.rs  spawning.rs  state.rs  types.rs  weapons.rs
xtask/: Cargo.toml
xtask/src/: asset_gen.rs  build.rs  config.rs  install.rs  main.rs
(+264 files in other folders)
