[workspace]
members = ["xtask"]
exclude = ["games/lumina-depths", "games/neon-drift", "games/prism-survivors", "games/override"]
resolver = "2"

# Note: Games are NOT workspace members because:
# 1. They build to wasm32-unknown-unknown target
# 2. They have their own standalone workspace declarations
# 3. xtask manages them externally via subprocess

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Parallelism
rayon = "1"

# File utilities
walkdir = "2"
directories = "6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Process execution
which = "7"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Colorful output
colored = "2"
