[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
clap.workspace = true
anyhow.workspace = true
rayon.workspace = true
walkdir.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
which.workspace = true
chrono.workspace = true
colored.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"
