[package]
name = "lumina-depths"
version = "0.1.0"
edition = "2021"
description = "Meditative underwater exploration for Nethercore ZX"

# Standalone workspace (not part of parent zx-showcase workspace)
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
glam = { version = "0.29", default-features = false, features = ["libm"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
