[package]
name = "prism-survivors"
version = "0.1.0"
edition = "2021"
description = "4-player co-op fantasy survival game for Nethercore ZX"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Math utilities for no_std WASM
libm = "0.2"
glam = { version = "0.29", default-features = false, features = ["libm"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1

